# Continent-Generator

./: .gitignore  CLAUDE.md  CODING_RULES.md  README.md  commit.patch  index.html  package-lock.json  package.json  pyproject.toml
cli/: __init__.py  main.py
docs/: MS3-4-Architectural-Core.txt  MS3-5-Architectural-Core.txt  MS4-3-Architectural-Core.txt  MS5-03-Plate-Generation.txt  MS5-04-Plate-Generation.txt  MS5-05-Plate-Generation.txt  MS5-1-Stress-Computation.txt  MS5-2-Topography.txt  MS5-3-Topography.txt  Tweak-5-21-Topography.txt  Tweak-5-22-Topography.txt  Tweak-5-24-Topography.txt  Tweak-5-31-Topography.txt  Tweak-5-32-Topography.txt  Tweak-5-33-Topography.txt  continent-generator-controls.csv  continent-generator-design-spec.md  ms20-structural-diagnostics.md  notes-to-self.txt  perf.md  plan.md  rewrite.md  spec.md  vision.md
scripts/: ms17-snapshot.ts  ms18-snapshot.ts
shaders/: heightmap_compute.wgsl  pass1_generate_land_mask.wgsl  pass1_generate_plates.wgsl  pass2_derive_land_mask.wgsl  pass2_reduce_bbox.wgsl  pass3_boundary_stress.wgsl  pass3_shift_land_mask.wgsl  pass4_generate_plate_ids.wgsl  pass5_compute_fault_stress.wgsl  pass6_elevation.wgsl  pass6_generate_elevation.wgsl  pass7_shaded_relief.wgsl  pass8_jfa_step.wgsl  pass9_jfa_init.wgsl
src/: main.js  main.ts  style.css
terrain/: __init__.py  climate.py  config.py  derive.py  geomorph.py  heightfield.py  hydrology.py  io.py  mask.py  metrics.py  noise.py  rng.py  seed.py  tectonics.py
tests/: analyze_moisture.py  analyze_rivers.py  continent.test.ts  diagnostics.test.ts  generator.test.ts  (+21 more)
(+19 files in other folders)
